[docs] Add docs for env.* JVM and process options (#3618)